# snake-fury

./: .gitignore  README.md  default.nix  snake-fury.cabal  snake.cabal  stack.yaml
app/: App.hs  Main.hs
src/: Board.hs  EventQueue.hs  GameState.hs  Initialization.hs  RenderState.hs  Snake.hs
test/: EventQueueSpec.hs  GameStateSpec.hs  RenderStateSpec.hs
