cabal-version:  2.2
name:           snake-fury
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/snake-fury#readme>
homepage:       https://github.com/lsmor/snake-fury#readme
bug-reports:    https://github.com/lsmor/snake-fury/issues
author:         Luis Morillo Najarro
maintainer:     example@example.com
copyright:      2021 Luis Morillo Najarro
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/lsmor/snake-fury

common common
  build-depends:
      base >=4.14 && < 5
    , BoundedChan >= 1.0.3.0 && < 1.1
    , array >= 0.5.4.0 && < 0.6
    , containers >= 0.6.5.1 && < 0.7
    , random >= 1.2.0 && < 1.3
  default-language: Haskell2010

library
  import: common
  exposed-modules:
      EventQueue
      Board
      Snake
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      src
  default-extensions:
      StrictData

executable snake-tui
  import: common
  main-is: Main.hs
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -Wall
  build-depends:
    snake-fury