cabal-version:  3.0
name:           snake-fury
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/snake-fury#readme>
homepage:       https://github.com/lsmor/snake-fury#readme
bug-reports:    https://github.com/lsmor/snake-fury/issues
author:         Luis Morillo Najarro
maintainer:     example@example.com
copyright:      2021 Luis Morillo Najarro
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/lsmor/snake-fury

library
  exposed-modules:
      EventQueue
      RenderState
      GameState
      Initialization
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      src
  default-extensions:
      StrictData
  build-depends:
      base 
    , BoundedChan ^>= 1.0.3.0
    , array ^>= 0.5.4.0
    , bytestring ^>= 0.10.12.0
    , containers 
    , transformers ^>= 0.5.6.2
    , mtl ^>= 2.2.2
    , random ^>= 1.2.0
    , hspec
  default-language: Haskell2010

executable snake-fury
  main-is: Main.hs
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      app
  default-extensions:
      StrictData
  ghc-options: -threaded -rtsopts -Wall
  build-depends:
      base >=4.7 && <5
    , snake-fury
    , bytestring ^>= 0.10.12.0
  default-language: Haskell2010

test-suite spec
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  build-depends:    array, base, containers, hspec, random, snake-fury
  other-modules:    GameStateSpec, RenderStateSpec

