cabal-version:  3.0
name:           snake-fury
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/snake-fury#readme>
homepage:       https://github.com/lsmor/snake-fury#readme
bug-reports:    https://github.com/lsmor/snake-fury/issues
author:         Luis Morillo Najarro
copyright:      2021 Luis Morillo Najarro
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/lsmor/snake-fury

common shared-properties
  default-language: Haskell2010
  default-extensions:
      BangPatterns
      FlexibleContexts
      ImportQualifiedPost
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      StrictData
      TypeApplications

library
  import: shared-properties
  ghc-options: -Wall -O2
  exposed-modules:
      EventQueue
      RenderState
      GameState
      Initialization
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      src
  build-depends:
      base 
    , BoundedChan ^>= 1.0.3.0
    , array ^>= 0.5.4.0
    , bytestring ^>= 0.10.12.0
    , containers 
    , transformers ^>= 0.5.6.2
    , mtl ^>= 2.2.2
    , random ^>= 1.2.0
    , hspec

executable snake-fury
  import: shared-properties
  ghc-options: -threaded -rtsopts -Wall -O2
  main-is: Main.hs
  other-modules:
      Paths_snake_fury
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , snake-fury
    , bytestring ^>= 0.10.12.0

test-suite spec
  import: shared-properties
  main-is:          Spec.hs
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  build-depends:    array, base, bytestring, containers, hspec, mtl, random, snake-fury, transformers
  other-modules:    EventQueueSpec, GameStateSpec, RenderStateSpec

